[workspace.package]
version = "0.1.1"
authors = ["Eric Seppanen <eds@reric.net>"]
repository = "https://github.com/ericseppanen/x509-test"

[workspace]
members = [
    "x509-test-gen",
    "x509-test-certs",
    "cert-test-examples",
]

[workspace.metadata.release]
pre-release-commit-message = "release {{version}}"
